Doc/force-app/main/default/objects/Utilization_Snapshot__c/fields/Billable_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Billable_Utilization__c</fullName>
    <label>Billable Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>