Doc/force-app/main/default/objects/Utilization_Snapshot__c/fields/Excluded_Hours__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Hours__c</fullName>
    <label>Excluded Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>