Doc/force-app/main/default/objects/Utilization_Snapshot__c/fields/Resource_Group__c.field-meta.xml
<CustomField>
    <fullName>Resource_Group__c</fullName>
    <label>Resource Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>