Doc/force-app/main/default/objects/Utilization_Snapshot__c/fields/Resource_Manager__c.field-meta.xml
<CustomField>
    <fullName>Resource_Manager__c</fullName>
    <label>Resource Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>