Doc/force-app/main/default/objects/Utilization_Snapshot__c/fields/X3_Month_Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>X3_Month_Snapshot_Date__c</fullName>
    <label>3 Month Snapshot Date</label>
    <type>Date</type>
</CustomField>